re-init update 3
re-init update 3

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title></title>
-        <meta name="description" content="">
+        <meta name="description" content="Daniel's FCC Leaderboard'">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
+        <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css'>
+        <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css'>
+        <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Open+Sans'>
+        <link rel="stylesheet" href="css/style.css">
         <link rel="apple-touch-icon" href="markham-fcc-apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
 
@@ -18,5 +21,10 @@
         <header></header>
         <section id="leaderboard"></section>
         <footer></footer>
+            <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
+            <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react.min.js'></script>
+            <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react-dom.min.js'></script>
+            <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js'></script>
+            <script src="js/index.js"></script>
     </body>
 </html>
