update current homepage
update current homepage

--- a/index.html
+++ b/index.html
@@ -19,7 +19,25 @@
     </head>
     <body>
         <header></header>
+            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>            
+            <ins class="adsbygoogle"
+                style="display:block"
+                data-ad-client="ca-pub-2490173776997871"
+                data-ad-slot="8614298846"
+                data-ad-format="auto"></ins>
+            <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
         <section id="leaderboard"></section>
+            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>            
+            <ins class="adsbygoogle"
+                style="display:block"
+                data-ad-client="ca-pub-2490173776997871"
+                data-ad-slot="8614298846"
+                data-ad-format="auto"></ins>
+            <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
         <footer></footer>
             <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
             <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react.min.js'></script>
