update index's Footer Links
update index's Footer Links

--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
             (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
         <section id="leaderboard"></section>
+        <div class="btn-group" role="group" aria-label="Basic example">
+            <button type="button" class="btn btn-secondary"><a href="https://campsites.herokuapp.com/">Camper Sites</a></button>            
+            <button type="button" class="btn btn-secondary"><a href="https://campsites.herokuapp.com/">Markham FaceBook Group</a></button>
+            <button type="button" class="btn btn-secondary"><a href="#">Markham FCC Meetups</a></button>
+            <button type="button" class="btn btn-secondary"><a href="https://campsites.herokuapp.com/">FCC Camper Sites</a></button>
+            <button type="button" class="btn btn-secondary"><a href="https://campsites.herokuapp.com/">FCC LeaderBoard</a></button>
+            <button type="button" class="btn btn-secondary"><a href="http://programming.epostblog.com/">Blog</a></button>
+            
+        </div>
             <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>            
             <ins class="adsbygoogle"
                 style="display:block"
