Add leaderboard page
Add leaderboard page

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -35,7 +35,7 @@
                 <button type="button" class="btn btn-secondary"><a href="https://campsites.herokuapp.com/">Markham FaceBook Group</a></button>
                 <button type="button" class="btn btn-secondary"><a href="#">Markham FCC Meetups</a></button>
                 <button type="button" class="btn btn-secondary"><a href="https://campsites.herokuapp.com/">FCC Camper Sites</a></button>
-                <button type="button" class="btn btn-secondary"><a href="./leaderboard.html">FCC LeaderBoard</a></button>
+                <button type="button" class="btn btn-secondary"><a href=".">FCC LeaderBoard</a></button>
                 <button type="button" class="btn btn-secondary"><a href="http://programming.epostblog.com/">Blog</a></button>
             </div>
         </div>
