add modernizr.min.js ++
add modernizr.min.js ++

--- a/index.html
+++ b/index.html
@@ -48,17 +48,8 @@
                 </form>
             </nav>
 
-            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>            
-            <ins class="adsbygoogle"
-                style="display:block"
-                data-ad-client="ca-pub-2490173776997871"
-                data-ad-slot="8614298846"
-                data-ad-format="auto"></ins>
-            <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
         <section id="leaderboard"></section>
-        <div class="center">
+        <div align="center">
             <div class="btn-group" role="group" aria-label="Basic example">
                 <button type="button" class="btn btn-secondary"><a href="https://campsites.herokuapp.com/">Camper Sites</a></button>            
                 <button type="button" class="btn btn-secondary"><a href="https://campsites.herokuapp.com/">Markham FaceBook Group</a></button>
@@ -67,7 +58,6 @@
                 <button type="button" class="btn btn-secondary"><a href="./leaderboard.html">FCC LeaderBoard</a></button>
                 <button type="button" class="btn btn-secondary"><a href="http://programming.epostblog.com/">Blog</a></button>
             </div>
-        </div>
             <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>            
             <ins class="adsbygoogle"
                 style="display:block"
@@ -76,7 +66,8 @@
                 data-ad-format="auto"></ins>
             <script>
             (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
+            </script>            
+        </div>
         <footer></footer>
             <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
             <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react.min.js'></script>
