--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <!-- Place favicon.ico in the root directory -->
 
         <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <link rel="stylesheet" href="css/main.css">        
+        <script src="js/vendor/modernizr.min.js"></script>
     </head>
     <body>
         <header></header>
