--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                     <a class="nav-link" href="#">Link</a>
                     </li>
                     <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="http://example.com" id="supportedContentDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                    <a class="nav-link dropdown-toggle" href="http://example.com" target="_blank" rel="noopener" id="supportedContentDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
                     <div class="dropdown-menu" aria-labelledby="supportedContentDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
+                        <a class="dropdown-item" href="#" target="_blank" rel="noopener">Blog</a>
+                        <a class="dropdown-item" href="#" target="_blank" rel="noopener">Another action</a>
+                        <a class="dropdown-item" href="#" target="_blank" rel="noopener">Something else here</a>
                     </div>
                     </li>
                 </ul>
@@ -51,12 +51,12 @@
         <section id="leaderboard"></section>
         <div align="center">
             <div class="btn-group" role="group" aria-label="Basic example">
-                <button type="button" class="btn btn-secondary"><a href="https://campsites.herokuapp.com/">Camper Sites</a></button>            
-                <button type="button" class="btn btn-secondary"><a href="https://campsites.herokuapp.com/">Markham FaceBook Group</a></button>
-                <button type="button" class="btn btn-secondary"><a href="#">Markham FCC Meetups</a></button>
-                <button type="button" class="btn btn-secondary"><a href="https://campsites.herokuapp.com/">FCC Camper Sites</a></button>
+                <button type="button" class="btn btn-secondary"><a href="https://campsites.herokuapp.com/" target="_blank" rel="noopener">Camper Sites</a></button>            
+                <button type="button" class="btn btn-secondary"><a href="https://goo.gl/sTNGWN" target="_blank" rel="noopener">Markham FaceBook Group</a></button>
+                <button type="button" class="btn btn-secondary"><a href="https://goo.gl/MwJ8xF" target="_blank" rel="noopener">Markham FCC Meetups</a></button>
+                <button type="button" class="btn btn-secondary"><a href="https://goo.gl/MywsC8" target="_blank" rel="noopener">FCC Camper Sites</a></button>
                 <button type="button" class="btn btn-secondary"><a href="./leaderboard.html">FCC LeaderBoard</a></button>
-                <button type="button" class="btn btn-secondary"><a href="http://programming.epostblog.com/">Blog</a></button>
+                <button type="button" class="btn btn-secondary"><a href="https://goo.gl/lruxzO" target="_blank" rel="noopener">Blog</a></button>
             </div>
             <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>            
             <ins class="adsbygoogle"
