--- a/leaderboard.html
+++ b/leaderboard.html
@@ -20,18 +20,6 @@
     </head>
     <body>
         <header></header>
-
-
-            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>            
-            <ins class="adsbygoogle"
-                style="display:block"
-                data-ad-client="ca-pub-2490173776997871"
-                data-ad-slot="8614298846"
-                data-ad-format="auto"></ins>
-            <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-
                     
             <nav class="navbar navbar-light bg-faded">
                 <a class="navbar-brand" href="#">Navbar</a>
@@ -59,16 +47,17 @@
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
             </nav>
-            
+
         <section id="leaderboard"></section>
         <div class="center">
             <div class="btn-group" role="group" aria-label="Basic example">
-                <button type="button" class="btn btn-secondary"><a href="https://campsites.herokuapp.com/">Camper Sites</a></button>            
-                <button type="button" class="btn btn-secondary"><a href="https://campsites.herokuapp.com/">Markham FaceBook Group</a></button>
-                <button type="button" class="btn btn-secondary"><a href="#">Markham FCC Meetups</a></button>
-                <button type="button" class="btn btn-secondary"><a href="https://campsites.herokuapp.com/">FCC Camper Sites</a></button>
+                <button type="button" class="btn btn-secondary"><a href="https://campsites.herokuapp.com/" target="_blank" rel="noopener">Camper Sites</a></button>            
+                <button type="button" class="btn btn-secondary"><a href="https://goo.gl/sTNGWN" target="_blank" rel="noopener">Markham FaceBook Group</a></button>
+                <button type="button" class="btn btn-secondary"><a href="https://goo.gl/MwJ8xF" target="_blank" rel="noopener">Markham FCC Meetups</a></button>
+                <button type="button" class="btn btn-secondary"><a href="https://goo.gl/MywsC8" target="_blank" rel="noopener">FCC Camper Sites</a></button>
                 <button type="button" class="btn btn-secondary"><a href=".">FCC LeaderBoard</a></button>
-                <button type="button" class="btn btn-secondary"><a href="http://programming.epostblog.com/">Blog</a></button>
+                <button type="button" class="btn btn-secondary"><a href="https://goo.gl/lruxzO" target="_blank" rel="noopener">Blog</a></button>
+            </div>
             </div>
             <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>            
             <ins class="adsbygoogle"
