--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
             </script>            
         </div>
         <footer></footer>
+        
+            <h3><i class="icon-arrow-down"></i>
             <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
             <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react.min.js'></script>
             <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react-dom.min.js'></script>
