--- a/index.html
+++ b/index.html
@@ -70,7 +70,10 @@
         </div>
         <footer></footer>
         
-            <h3><i class="fa fa-arrow-up" aria-hidden="true"></i></h3>
+            <h3>
+                <a href="javascript:" id="return-to-top"><i class="fa fa-arrow-up"></i></a>
+            </h3>
+
             <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
             <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react.min.js'></script>
             <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react-dom.min.js'></script>
