--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">    
+    <base href="/">
     <title>Display FreeCodeCamp users</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
