--- a/app/main/main.html
+++ b/app/main/main.html
@@ -132,6 +132,6 @@
 
 <footer class="footer">
   <div class="container">
-      <p>*** By <a href="http://www.freecodecamp.com/roelver">@roelver</a> ***</p>
+      <p>*** Thanks to @roelver</a> ***</p>
   </div>
 </footer>
