--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
         <script src="bower_components/es5-shim/es5-shim.js"></script>
         <script src="bower_components/json3/lib/json3.min.js"></script>
         <![endif]-->
-        <script src="app/mk-fcc.vendor.js"></script>        
-        <script src="app/fcc-points-api.js"></script>        
+        <!-- <script src="app/mk-fcc.vendor.js"></script>        
+        <script src="app/fcc-points-api.js"></script> -->
+        <script src="app/app.js"></script>
+          <!-- injector:js -->
+          <script src="app/main/main.controller.js"></script>
+          <script src="app/main/main.js"></script>
+          <script src="components/auth/auth.service.js"></script>
+          <script src="components/auth/fccuser.service.js"></script>        
     </body>
 </html>
