--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
 		<div class="logo-wrap">
 			<div class="container">
 				<div class="desktop-6 columns">
-					<h1><a href="index.html" title="Home"><img src="images/logo_text_half.png" alt="" /></a></h1>
+					<h1><a href="." title="Home"><img src="./img/MarkhamCoders-Logo2.png" alt="" /></a></h1>
 				</div><!-- // .desktop-6 -->
 
 				<div class="desktop-6 columns">
 					<p class="site-desc">
 						Emily Bernd &amp; Associates<br />
-						<span class="font-color-primary">From product to all things digital</span>
+						<span class="font-color-primary">[Markham Coders] coding the digital future!</span>
 					</p><!-- // .site-desc -->
 				</div><!-- // .desktop-6 -->
 
