--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<meta charset="utf-8">
 	<title>Typefolio</title>
 	<meta name="description" content=".">
-	<meta name="author" content="">
-	
+	<meta name="author" content="Daniel Lim | Profound Ideation Inc.">
+	<meta name="google-site-verification" content="HuplK0zFmUBm6z8AHSI7srxxDNoMDUdNvqJ-bZa17K4" />
 	<!-- Mobile Specific Metas
 	================================================== -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -73,19 +73,15 @@
 							<span class="count hide-on-mobile">01.</span>
 							About
 						</a>
-						<ul>
-							<li><a href="index-with-iosslider.html">Home w/ Slider</a></li>
-							<li><a href="index-with-flexslider.html">Home w/ Slider 2</a></li>
-							<li><a href="contact.html">Contact Us</a></li>
-						</ul>
+						
 					</li>
 					<li>
 						<a href="works-stackgrid-with-title.html">
 							<span class="count hide-on-mobile">02.</span>
-							Works
+							Projects
 						</a>
 						<ul>
-							<li><a href="works-stackgrid-images.html">Images Only</a></li>
+							<li><a href="works-stackgrid-images.html">Markham FCC</a></li>
 							<li><a href="works-architecture-three-columns.html">Architecture</a></li>
 							<li class="hide-on-mobile"><a href="works-architecture-two-columns.html">Two Columns</a></li>
 							<li>
@@ -100,7 +96,7 @@
 
 					<li>
 						<a href="shop.html">
-							<span class="count hide-on-mobile">03.</span>Shop
+							<span class="count hide-on-mobile">03.</span>Join
 						</a>
 						<ul>
 							<li><a href="shop-item.html">Single Item</a></li>
@@ -110,7 +106,7 @@
 					<li>
 						<a href="archive-blog.html">
 							<span class="count hide-on-mobile">04.</span>
-							Blog
+							Contact
 						</a>
 						<ul>
 							<li><a href="single-blog.html">Single Page</a></li>
@@ -371,18 +367,7 @@
 	<script src="js/less-1.4.0.min.js"></script>
 	<script src="js/jquery.typeMenu.js"></script>
 	<script src="js/jquery.typeSticky.js"></script>
-
-
-	
-
-	
-
-
-	
-
-
 	<script src="js/jquery.custom.js"></script>
-
 
 <!-- End Document
 ================================================== -->
