--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
 				<a href="single-illustration-sidebar-left.html" class="permalink">
 					<div class="desktop-3 mobile-half columns">
 						<div class="item first-row">
-							<h3>Bird</h3>
-							<span class="category">Illustration</span>
+							<h3>Markham FCC Site</h3>
+							<span class="category">GitHub, HTML, CSS, JS</span>
 
 							<img src="images/thumb_item01.png" alt="" />
 						</div><!-- // .item -->
@@ -167,19 +167,19 @@
 				<a href="single-illustration-sidebar-left.html" class="permalink">
 					<div class="desktop-3 mobile-half columns">
 						<div class="item first-row">
-							<h3>Beavers</h3>
-							<span class="category">Illustration</span>
+							<h3>Online Courses Tracker</h3>
+							<span class="category">Angular, FireBase</span>
 
 							<img src="images/thumb_item02.png" alt="" />
 						</div><!-- // .item -->
 					</div><!-- // .desktop-3 -->
 				</a>
 				
-				<a href="single-illustration-sidebar-left.html" class="permalink">
+				<a href="./leaderboard.html" class="permalink">
 					<div class="desktop-3 mobile-half columns">
 						<div class="item first-row">
-							<h3>Deer</h3>
-							<span class="category">Illustration</span>
+							<h3>LeaderBoard</h3>
+							<span class="category">React, HTML, CSS, etc.</span>
 
 							<img src="images/thumb_item03.png" alt="" />
 						</div><!-- // .item -->
