--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 							<h3>Online Courses Tracker</h3>
 							<span class="category">Angular, FireBase</span>
 
-							<img src="images/thumb_item02.png" alt="" />
+							<img src="img/Placeholder-Image-Christmas.jpg" alt="Markham Coders: Christmas Placeholder Image" />
 						</div><!-- // .item -->
 					</div><!-- // .desktop-3 -->
 				</a>
@@ -181,7 +181,7 @@
 							<h3>LeaderBoard</h3>
 							<span class="category">React, HTML, CSS, etc.</span>
 
-							<img src="images/thumb_item03.png" alt="" />
+							<img src="img/Placeholder-Image-Christmas.jpg" alt="Markham Coders: Christmas Placeholder Image" />
 						</div><!-- // .item -->
 					</div><!-- // .desktop-3 -->
 				</a>
