--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
               <a href="about.html">
                 <span class="count hide-on-mobile">01.</span> About
               </a>
-
             </li>
             <li>
               <a href="works-stackgrid-with-title.html">
@@ -91,12 +90,9 @@
             </li>
 
             <li>
-              <a href="shop.html">
+              <a href="join.html">
                 <span class="count hide-on-mobile">03.</span>Join
-              </a>
-              <ul>
-                <li><a href="shop-item.html">Single Item</a></li>
-              </ul>
+              </a>              
             </li>
 
             <li>
@@ -197,171 +193,7 @@
           </div>
           <!-- // .desktop-3 -->
         </a>
-
         <div class="clear"></div>
-
-        <a href="#" class="permalink">
-          <div class="desktop-3 mobile-half columns">
-            <div class="item">
-              <h3>Cycle</h3>
-              <span class="category">Illustration</span>
-
-              <img src="img/Placeholder-Image-Christmas.jpg" alt="Markham Coders: Christmas Placeholder Image" />
-            </div>
-            <!-- // .item -->
-          </div>
-          <!-- // .desktop-3 -->
-        </a>
-
-        <a href="#" class="permalink">
-          <div class="desktop-3 mobile-half columns">
-            <div class="item">
-              <h3>Crown</h3>
-              <span class="category">Illustration</span>
-
-              <img src="img/Placeholder-Image-Christmas.jpg" alt="Markham Coders: Christmas Placeholder Image" />
-            </div>
-            <!-- // .item -->
-          </div>
-          <!-- // .desktop-3 -->
-        </a>
-
-        <a href="#" class="permalink">
-          <div class="desktop-3 mobile-half columns">
-            <div class="item">
-              <h3>Lens</h3>
-              <span class="category">Illustration</span>
-
-              <img src="img/Placeholder-Image-Christmas.jpg" alt="Markham Coders: Christmas Placeholder Image" />
-            </div>
-            <!-- // .item -->
-          </div>
-          <!-- // .desktop-3 -->
-        </a>
-
-        <a href="#" class="permalink">
-          <div class="desktop-3 mobile-half columns">
-            <div class="item">
-              <h3>Brain</h3>
-              <span class="category">Illustration</span>
-
-              <img src="img/Placeholder-Image-Christmas.jpg" alt="Markham Coders: Christmas Placeholder Image" />
-            </div>
-            <!-- // .item -->
-          </div>
-          <!-- // .desktop-3 -->
-        </a>
-
-        <div class="clear"></div>
-
-        <a href="#" class="permalink">
-          <div class="desktop-3 mobile-half columns">
-            <div class="item">
-              <h3>Gear</h3>
-              <span class="category">Illustration</span>
-
-              <img src="img/Placeholder-Image-Christmas.jpg" alt="Markham Coders: Christmas Placeholder Image" />
-            </div>
-            <!-- // .item -->
-          </div>
-          <!-- // .desktop-3 -->
-        </a>
-
-        <a href="#" class="permalink">
-          <div class="desktop-3 mobile-half columns">
-            <div class="item">
-              <h3>Skeleton</h3>
-              <span class="category">Illustration</span>
-
-              <img src="img/Placeholder-Image-Christmas.jpg" alt="Markham Coders: Christmas Placeholder Image" />
-            </div>
-            <!-- // .item -->
-          </div>
-          <!-- // .desktop-3 -->
-        </a>
-
-        <a href="#" class="permalink">
-          <div class="desktop-3 mobile-half columns">
-            <div class="item">
-              <h3>Shoe</h3>
-              <span class="category">Illustration</span>
-
-              <img src="img/Placeholder-Image-Christmas.jpg" alt="Markham Coders: Christmas Placeholder Image" />
-            </div>
-            <!-- // .item -->
-          </div>
-          <!-- // .desktop-3 -->
-        </a>
-
-        <a href="#" class="permalink">
-          <div class="desktop-3 mobile-half columns">
-            <div class="item">
-              <h3>Apeture</h3>
-              <span class="category">Illustration</span>
-
-              <img src="img/Placeholder-Image-Christmas.jpg" alt="Markham Coders: Christmas Placeholder Image" />
-            </div>
-            <!-- // .item -->
-          </div>
-          <!-- // .desktop-3 -->
-        </a>
-
-        <div class="clear"></div>
-
-        <a href="#" class="permalink">
-          <div class="desktop-3 mobile-half columns">
-            <div class="item">
-              <h3>Gears</h3>
-              <span class="category">Illustration</span>
-
-              <img src="img/Placeholder-Image-Christmas.jpg" alt="Markham Coders: Christmas Placeholder Image" />
-            </div>
-            <!-- // .item -->
-          </div>
-          <!-- // .desktop-3 -->
-        </a>
-
-        <a href="#" class="permalink">
-          <div class="desktop-3 mobile-half columns">
-            <div class="item">
-              <h3>Eye Closeup</h3>
-              <span class="category">Illustration</span>
-
-              <img src="img/Placeholder-Image-Christmas.jpg" alt="Markham Coders: Christmas Placeholder Image" />
-            </div>
-            <!-- // .item -->
-          </div>
-          <!-- // .desktop-3 -->
-        </a>
-
-        <a href="#" class="permalink">
-          <div class="desktop-3 mobile-half columns">
-            <div class="item">
-              <h3>Sailboat</h3>
-              <span class="category">Illustration</span>
-
-              <img src="img/Placeholder-Image-Christmas.jpg" alt="Markham Coders: Christmas Placeholder Image" />
-            </div>
-            <!-- // .item -->
-          </div>
-          <!-- // .desktop-3 -->
-        </a>
-
-        <a href="#" class="permalink">
-          <div class="desktop-3 mobile-half columns">
-            <div class="item">
-              <h3>Carrots</h3>
-              <span class="category">Illustration</span>
-
-              <img src="img/Placeholder-Image-Christmas.jpg" alt="Markham Coders: Christmas Placeholder Image" />
-            </div>
-            <!-- // .item -->
-          </div>
-          <!-- // .desktop-3 -->
-        </a>
-
-        <div class="clear"></div>
-
       </div>
       <!-- // .container -->
     </section>
@@ -371,26 +203,24 @@
     <section id="footer">
       <div class="container">
         <div class="desktop-3 columns">
-          <p>Copyright &copy; <a href="http://www.typebig.com" class="italic">Typebig</a></p>
+          <p>Copyright &copy; <a href="https://markhamfcc.github.io" class="italic">Markham FCC</a></p>
         </div>
         <!-- // .desktop-3 -->
 
         <div class="desktop-9 columns">
           <ul id="social">
-            <li><a href="http://www.facebook.com" class="hoverMe">Facebook</a></li>
-            <li><a href="http://www.twitter.com" class="hoverMe">Twitter</a></li>
-            <li><a href="http://www.google.com" class="hoverMe">Google+</a></li>
+			<li><a href="https://www.facebook.com/groups/free.code.camp.markham" class="hoverMe">Markham FCC (FaceBook Group)</a></li>
+            <li><a href="http://memberclouds.com/fcc" class="hoverMe">MemberClouds FCC</a></li>
+			<li><a href="https://www.freecodecamp.com" class="hoverMe">Free Code Camp (FCC)</a></li>
           </ul>
           <!-- // #social -->
         </div>
         <!-- // .desktop-9 -->
-
         <div class="clear"></div>
       </div>
       <!-- // .container -->
     </section>
     <!-- // section#footer -->
-
     <!-- JS	================================================== -->
     <!-- 
         Flexslider 2.1 has known issues of manualControls setting with jQuery 1.9~
@@ -403,7 +233,6 @@
     <script src="js/jquery.typeMenu.js"></script>
     <script src="js/jquery.typeSticky.js"></script>
     <script src="js/jquery.custom.js"></script>
-
     <!-- End Document ================================================== -->
   </body>
 </html>
