--- a/index.html
+++ b/index.html
@@ -76,16 +76,11 @@
                 <span class="count hide-on-mobile">02.</span> Projects
               </a>
               <ul>
-                <li><a href="works-stackgrid-images.html">Markham FCC</a></li>
-                <li><a href="works-architecture-three-columns.html">Architecture</a></li>
-                <li class="hide-on-mobile"><a href="works-architecture-two-columns.html">Two Columns</a></li>
-                <li>
-                  <a href="single-photography-sidebar-right.html">Single</a>
-                  <ul>
-                    <li><a href="single-photography-full-width.html">Full Width</a></li>
-                    <li><a href="single-photography-sidebar-left.html">Left Sidebar</a></li>
-                  </ul>
-                </li>
+                
+				<li><a href="https://www.facebook.com/groups/free.code.camp.markham" class="hoverMe">Markham FCC (FB Group)</a></li>
+            	<li><a href="http://memberclouds.com/fcc" class="hoverMe">MemberClouds FCC</a></li>
+				<li><a href="https://markhamcoders.github.io/"  class="hoverMe">Markham Coders</a></li>
+				<li><a href="https://www.freecodecamp.com" class="hoverMe">Free Code Camp (FCC)</a></li>
               </ul>
             </li>
 
