--- a/index.html
+++ b/index.html
@@ -8,41 +8,32 @@
   <head>
     <!-- Basic Page Needs ================================================== -->
     <meta charset="utf-8">
-    <title>Typefolio</title>
-    <meta name="description" content=".">
+    <title>Markham FCC</title>
+    <meta name="description" content="Markham FCC">
     <meta name="author" content="Daniel Lim | Profound Ideation Inc.">
     <meta name="google-site-verification" content="HuplK0zFmUBm6z8AHSI7srxxDNoMDUdNvqJ-bZa17K4" />
-
     <!-- Mobile Specific Metas ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
     <!-- CSS Files
       * cssreset-min.css 			- CSS reset
       * typegrid.css				- Responsive grid system
       * style.css					- Main CSS file
-
       Original LESS Stylesheet
       <link rel="stylesheet/less" type="text/css" href="css/style.less" />
       ================================================== -->
     <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.8.0/build/cssreset/cssreset-min.css">
     <link rel="stylesheet" type="text/css" href="css/typegrid.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-
     <!--[if lt IE 8]>
         <script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE8.js"></script>
       <![endif]-->
-
     <!--[if lt IE 9]>
         <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
       <![endif]-->
-
     <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300' rel='stylesheet' type='text/css'>
-
-    <!-- Favicons
-      ================================================== -->
+    <!-- Favicons ================================================== -->
     <link rel="shortcut icon" href="images/favicon.ico">
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-
   </head>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -76,24 +67,21 @@
                 <span class="count hide-on-mobile">02.</span> Projects
               </a>
               <ul>                
-				<li><a href="https://www.facebook.com/groups/free.code.camp.markham" class="hoverMe">Markham FCC (FB Group)</a></li>
-            	<li><a href="http://memberclouds.com/fcc" class="hoverMe">MemberClouds FCC</a></li>
-				<li><a href="https://markhamcoders.github.io/"  class="hoverMe">Markham Coders</a></li>
+				<li><a href="https://markhamcoders.github.io/" class="hoverMe">Markham Coders</a></li>
+				<li><a href="http://memberclouds.com/fcc" class="hoverMe">MemberClouds FCC</a></li>
 				<li><a href="https://www.freecodecamp.com" class="hoverMe">Free Code Camp (FCC)</a></li>
+				<li><a href="https://www.facebook.com/groups/free.code.camp.markham" class="hoverMe">Markham FCC (FB Group)</a></li>
               </ul>
             </li>
             <li>
               <a href="join.html">
-                <span class="count hide-on-mobile">03.</span>Join
+                <span class="count hide-on-mobile">03.</span> Join
               </a>              
             </li>
             <li>
-              <a href="archive-blog.html">
+              <a href="contact.html">
                 <span class="count hide-on-mobile">04.</span> Contact
-              </a>
-              <ul>
-                <li><a href="single-blog.html">Single Page</a></li>
-              </ul>
+              </a>              
             </li>
           </ul>
           <!-- // #nav -->
@@ -104,7 +92,7 @@
       <div class="logo-wrap">
         <div class="container">
           <div class="desktop-6 columns">
-            <h1><a href="." title="Home"><img src="./img/MarkhamCoders-Logo2.png" alt="" /></a></h1>
+            <h1><a href="." title="Home"><img src="./img/MarkhamCoders-Logo2.png" alt="Markham Coders" /></a></h1>
           </div>
           <!-- // .desktop-6 -->
           <div class="desktop-6 columns">
@@ -139,13 +127,11 @@
           </div>
           <!-- // .desktop-3 -->
         </a>
-
-        <a href="#" class="permalink">
+        <a href="https://github.com/profoundideation/Online-Course-Tracker" class="permalink">
           <div class="desktop-3 mobile-half columns">
             <div class="item first-row">
               <h3>Online Courses Tracker</h3>
               <span class="category">Angular, FireBase</span>
-
               <img src="img/Placeholder-Image-Christmas.jpg" alt="Markham Coders: Christmas Placeholder Image" />
             </div>
             <!-- // .item -->
