--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="desktop-12 columns">
           <div class="border-top"></div>
         </div>
-        <a href="#" class="permalink">
+        <a href="." class="permalink">
           <div class="desktop-3 mobile-half columns">
             <div class="item first-row">
               <h3>Markham FCC Site</h3>
@@ -138,7 +138,7 @@
           </div>
           <!-- // .desktop-3 -->
         </a>
-        <a href="#" class="permalink">
+        <a href="./leaderboard.html" class="permalink">
           <div class="desktop-3 mobile-half columns">
             <div class="item first-row">
               <h3>LeaderBoard</h3>
@@ -161,6 +161,59 @@
           <!-- // .desktop-3 -->
         </a>
         <div class="clear"></div>
+
+		 <a href="#" class="permalink">
+          <div class="desktop-3 mobile-half columns">
+            <div class="item">
+              <h3>Project</h3>
+              <span class="category">Project</span>
+
+              <img src="img/Placeholder-Image-Christmas.jpg" alt="Markham Coders: Christmas Placeholder Image" />
+            </div>
+            <!-- // .item -->
+          </div>
+          <!-- // .desktop-3 -->
+        </a>
+
+        <a href="#" class="permalink">
+          <div class="desktop-3 mobile-half columns">
+            <div class="item">
+              <h3>Project</h3>
+              <span class="category">Project</span>
+
+              <img src="img/Placeholder-Image-Christmas.jpg" alt="Markham Coders: Christmas Placeholder Image" />
+            </div>
+            <!-- // .item -->
+          </div>
+          <!-- // .desktop-3 -->
+        </a>
+
+        <a href="#" class="permalink">
+          <div class="desktop-3 mobile-half columns">
+            <div class="item">
+              <h3>Project</h3>
+              <span class="category">Project</span>
+
+              <img src="img/Placeholder-Image-Christmas.jpg" alt="Markham Coders: Christmas Placeholder Image" />
+            </div>
+            <!-- // .item -->
+          </div>
+          <!-- // .desktop-3 -->
+        </a>
+
+        <a href="#" class="permalink">
+          <div class="desktop-3 mobile-half columns">
+            <div class="item">
+              <h3>Brain</h3>
+              <span class="category">Project</span>
+
+              <img src="img/Placeholder-Image-Christmas.jpg" alt="Markham Coders: Christmas Placeholder Image" />
+            </div>
+            <!-- // .item -->
+          </div>
+          <!-- // .desktop-3 -->
+        </a>
+
       </div>
       <!-- // .container -->
     </section>
@@ -174,9 +227,10 @@
         <!-- // .desktop-3 -->
         <div class="desktop-9 columns">
           <ul id="social">
-			<li><a href="https://www.facebook.com/groups/free.code.camp.markham" class="hoverMe">Markham FCC (FaceBook Group)</a></li>
-            <li><a href="http://memberclouds.com/fcc" class="hoverMe">MemberClouds FCC</a></li>
-			<li><a href="https://www.freecodecamp.com" class="hoverMe">Free Code Camp (FCC)</a></li>
+			<li><a href="https://www.facebook.com/groups/free.code.camp.markham" class="hoverMe">Markham FCC (FaceBook Group)</a></li> | 
+            <li><a href="http://memberclouds.com/fcc" class="hoverMe">MemberClouds FCC</a></li> | 
+			<li><a href="https://www.freecodecamp.com" class="hoverMe">Free Code Camp (FCC)</a></li> | 
+			<li><a href="https://www.facebook.com/memberclouds" class="hoverMe">MemberClouds</a></li>
           </ul>
           <!-- // #social -->
         </div>
