--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
         </a>
         <div class="clear"></div>
 
-		 <a href="#" class="permalink">
+		 <a href="https://github.com/profoundideation/ontario-startup-directory" class="permalink">
           <div class="desktop-3 mobile-half columns">
             <div class="item">
-              <h3>Project</h3>
+              <h3>Ontario Startup Directory</h3>
               <span class="category">Project</span>
 
               <img src="img/Placeholder-Image-Christmas.jpg" alt="Markham Coders: Christmas Placeholder Image" />
@@ -175,10 +175,10 @@
           <!-- // .desktop-3 -->
         </a>
 
-        <a href="#" class="permalink">
+        <a href="https://github.com/profoundideation/Daily-Achievements" class="permalink">
           <div class="desktop-3 mobile-half columns">
             <div class="item">
-              <h3>Project</h3>
+              <h3>Daily Achievements</h3>
               <span class="category">Project</span>
 
               <img src="img/Placeholder-Image-Christmas.jpg" alt="Markham Coders: Christmas Placeholder Image" />
