--- a/contact.html
+++ b/contact.html
@@ -24,10 +24,9 @@
 	Original LESS Stylesheet
 	<link rel="stylesheet/less" type="text/css" href="css/style.less" />
 	================================================== -->
-	<link rel="stylesheet" type="text/css" href="https://yui.yahooapis.com/3.8.0/build/cssreset/cssreset-min.css">
+	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.8.0/build/cssreset/cssreset-min.css">    
 	<link rel="stylesheet" type="text/css" href="css/typegrid.css">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-		
+	<link rel="stylesheet" type="text/css" href="css/style.css">		
 	<!--[if lt IE 8]>
 		<script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE8.js"></script>
 	<![endif]-->
