--- a/contact.html
+++ b/contact.html
@@ -59,63 +59,44 @@
 			Top Bar & Menu (#nav)
 		* * * * * * * * * * * * * * * * * * * * * * * * -->
 		<div class="topbar">
-			<div class="container">					
-				<!--
-					A custom jQuery plugin called typeMenu handles the menu
-					Add .hide-on-mobile to <li> elements to hide a specific item on mobile viewports
-				-->
-				<ul id="nav" class="full">
-					<li>
-						<a href="about.html">
-							<span class="count hide-on-mobile">01.</span>
-							About
-						</a>
-						<ul>
-							<li><a href="index-with-iosslider.html">Home w/ Slider</a></li>
-							<li><a href="index-with-flexslider.html">Home w/ Slider 2</a></li>
-							<li><a href="contact.html">Contact Us</a></li>
-						</ul>
-					</li>
-					<li>
-						<a href="works-stackgrid-with-title.html">
-							<span class="count hide-on-mobile">02.</span>
-							Works
-						</a>
-						<ul>
-							<li><a href="works-stackgrid-images.html">Images Only</a></li>
-							<li><a href="works-architecture-three-columns.html">Architecture</a></li>
-							<li class="hide-on-mobile"><a href="works-architecture-two-columns.html">Two Columns</a></li>
-							<li>
-								<a href="single-photography-sidebar-right.html">Single</a>
-								<ul>
-									<li><a href="single-photography-full-width.html">Full Width</a></li>
-									<li><a href="single-photography-sidebar-left.html">Left Sidebar</a></li>
-								</ul>
-							</li>
-						</ul>
-					</li>
-
-					<li>
-						<a href="shop.html">
-							<span class="count hide-on-mobile">03.</span>Shop
-						</a>
-						<ul>
-							<li><a href="shop-item.html">Single Item</a></li>
-						</ul>
-					</li>
-
-					<li>
-						<a href="archive-blog.html">
-							<span class="count hide-on-mobile">04.</span>
-							Blog
-						</a>
-						<ul>
-							<li><a href="single-blog.html">Single Page</a></li>
-						</ul>
-					</li>					
-				</ul><!-- // #nav -->
-			</div><!-- // .container -->
-		</div><!-- // .topbar -->
+        <div class="container">
+          <!--
+              A custom jQuery plugin called typeMenu handles the menu
+              Add .hide-on-mobile to <li> elements to hide a specific item on mobile viewports
+            -->
+          <ul id="nav" class="full">
+            <li>
+              <a href="about.html">
+                <span class="count hide-on-mobile">01.</span> About
+              </a>
+            </li>
+            <li>
+              <a href="works-stackgrid-with-title.html">
+                <span class="count hide-on-mobile">02.</span> Projects
+              </a>
+              <ul>                
+				<li><a href="https://markhamcoders.github.io/" class="hoverMe">Markham Coders</a></li>
+				<li><a href="http://memberclouds.com/fcc" class="hoverMe">MemberClouds FCC</a></li>
+				<li><a href="https://www.freecodecamp.com" class="hoverMe">Free Code Camp (FCC)</a></li>
+				<li><a href="https://www.facebook.com/groups/free.code.camp.markham" class="hoverMe">Markham FCC (FB Group)</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="join.html">
+                <span class="count hide-on-mobile">03.</span> Join
+              </a>              
+            </li>
+            <li>
+              <a href="contact.html">
+                <span class="count hide-on-mobile">04.</span> Contact
+              </a>              
+            </li>
+          </ul>
+          <!-- // #nav -->
+        </div>
+        <!-- // .container -->
+      </div>
+      <!-- // .topbar -->
 
 		<div class="logo-wrap">
 			<div class="container">
@@ -143,7 +124,7 @@
 			<div class="desktop-6 tablet-12 columns">
 
 				<h2 class="border-top">Contact</h2>
-				<p class="title-desc">Find Us Here</p>				
+
 				<script type="text/javascript" src="https://form.jotform.com/jsform/63508485231254"></script>
 				
 				<div class="clear"></div>
@@ -189,9 +170,10 @@
 
 			<div class="desktop-9 columns">
 				<ul id="social">
-					<li><a href="https://www.facebook.com/groups/free.code.camp.markham" class="hoverMe">Markham FCC (FaceBook Group)</a></li>
-                    <li><a href="http://memberclouds.com/fcc" class="hoverMe">MemberClouds FCC</a></li>
-			        <li><a href="https://www.freecodecamp.com" class="hoverMe">Free Code Camp (FCC)</a></li>
+					<li><a href="https://www.facebook.com/groups/free.code.camp.markham" class="hoverMe">Markham FCC (FaceBook Group)</a></li>  
+					<li><a href="http://memberclouds.com/fcc" class="hoverMe">MemberClouds FCC</a></li>  
+					<li><a href="https://www.freecodecamp.com" class="hoverMe">Free Code Camp (FCC)</a></li>  
+					<li><a href="https://www.facebook.com/memberclouds" class="hoverMe">MemberClouds</a></li>
 				</ul><!-- // #social -->
 			</div><!-- // .desktop-9 -->
 			<div class="clear"></div>
