--- a/index.html
+++ b/index.html
@@ -225,9 +225,9 @@
         <!-- // .desktop-3 -->
         <div class="desktop-9 columns">
           <ul id="social">
-			<li><a href="https://www.facebook.com/groups/free.code.camp.markham" class="hoverMe">Markham FCC (FaceBook Group)</a></li> | 
-            <li><a href="http://memberclouds.com/fcc" class="hoverMe">MemberClouds FCC</a></li> | 
-			<li><a href="https://www.freecodecamp.com" class="hoverMe">Free Code Camp (FCC)</a></li> | 
+			<li><a href="https://www.facebook.com/groups/free.code.camp.markham" class="hoverMe">Markham FCC (FaceBook Group)</a></li>  
+            <li><a href="http://memberclouds.com/fcc" class="hoverMe">MemberClouds FCC</a></li>  
+			<li><a href="https://www.freecodecamp.com" class="hoverMe">Free Code Camp (FCC)</a></li>  
 			<li><a href="https://www.facebook.com/memberclouds" class="hoverMe">MemberClouds</a></li>
           </ul>
           <!-- // #social -->
