--- a/join.html
+++ b/join.html
@@ -1,1 +1,166 @@
-<script type="text/javascript" src="https://form.jotform.com/jsform/63508944037258"></script>
+
+<!DOCTYPE html>
+<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
+<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
+<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
+<head>
+
+	<!-- Basic Page Needs
+	================================================== -->
+	<meta charset="utf-8">
+    <title>Markham FCC</title>
+    <meta name="description" content="Markham FCC">
+    <meta name="author" content="Daniel Lim | Profound Ideation Inc.">    	
+	<!-- Mobile Specific Metas
+	================================================== -->
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	
+	<!-- CSS Files
+	* cssreset-min.css 			- CSS reset
+	* typegrid.css				- Responsive grid system
+	* style.css					- Main CSS file
+	
+	Original LESS Stylesheet
+	<link rel="stylesheet/less" type="text/css" href="css/style.less" />
+	================================================== -->
+	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.8.0/build/cssreset/cssreset-min.css">    
+	<link rel="stylesheet" type="text/css" href="css/typegrid.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">		
+	<!--[if lt IE 8]>
+		<script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE8.js"></script>
+	<![endif]-->
+
+	<!--[if lt IE 9]>
+		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
+
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,300' rel='stylesheet' type='text/css'>
+
+	<!-- Favicons
+	================================================== -->
+	<link rel="shortcut icon" href="images/favicon.ico">
+	<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+</head>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-89128359-1', 'auto');
+      ga('send', 'pageview');
+  </script>
+<body>
+	<!-- Header - Half Logo
+	================================================== -->
+	<section id="header">
+		<!-- * * * * * * * * * * * * * * * * * * * * * * *
+			Top Bar & Menu (#nav)
+		* * * * * * * * * * * * * * * * * * * * * * * * -->
+		<div class="topbar">
+        <div class="container">
+          <!--
+              A custom jQuery plugin called typeMenu handles the menu
+              Add .hide-on-mobile to <li> elements to hide a specific item on mobile viewports
+            -->
+          <ul id="nav" class="full">
+            <li>
+              <a href="about.html">
+                <span class="count hide-on-mobile">01.</span> About
+              </a>
+            </li>
+            <li>
+              <a href="works-stackgrid-with-title.html">
+                <span class="count hide-on-mobile">02.</span> Projects
+              </a>
+              <ul>                
+				<li><a href="https://markhamcoders.github.io/" class="hoverMe">Markham Coders</a></li>
+				<li><a href="http://memberclouds.com/fcc" class="hoverMe">MemberClouds FCC</a></li>
+				<li><a href="https://www.freecodecamp.com" class="hoverMe">Free Code Camp (FCC)</a></li>
+				<li><a href="https://www.facebook.com/groups/free.code.camp.markham" class="hoverMe">Markham FCC (FB Group)</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="join.html">
+                <span class="count hide-on-mobile">03.</span> Join
+              </a>              
+            </li>
+            <li>
+              <a href="contact.html">
+                <span class="count hide-on-mobile">04.</span> Contact
+              </a>              
+            </li>
+          </ul>
+          <!-- // #nav -->
+        </div>
+        <!-- // .container -->
+      </div>
+      <!-- // .topbar -->
+
+		<div class="logo-wrap">
+			<div class="container">
+				<div class="desktop-6 columns">
+					<h1><a href="." title="Home"><img src="./img/MarkhamCoders-Logo2.png" alt="Markham Coders" /></a></h1>
+				</div><!-- // .desktop-6 -->
+
+				<div class="desktop-6 columns">
+					<p class="site-desc">
+						Markham Coders &amp; MemberClouds &amp; Profound Ideation Inc. | Daniel Lim<br />
+                        <span class="font-color-primary">[Markham Coders] coding the digital future!</span>
+					</p><!-- // .site-desc -->
+				</div><!-- // .desktop-6 -->
+
+				<div class="clear"></div>
+			</div><!-- // .container -->
+		</div><!-- // .logo-wrap -->
+	</section><!-- // #header -->
+
+	<!-- Contact
+	================================================== -->
+	<section id="contact" class="section page">
+		<div class="container">
+
+            <script type="text/javascript" src="https://form.jotform.com/jsform/63508944037258"></script>
+
+			
+		</div><!-- // .container -->
+	</section><!-- // section#contact -->
+
+	<!-- Footer ================================================== -->
+	<section id="footer">
+		<div class="container">
+			<div class="desktop-3 columns">
+				<p>Copyright &copy; 2016 <a href="http://www.memberclouds.com/fcc" class="italic">MemberClouds</a></p>
+			</div><!-- // .desktop-3 -->
+
+			<div class="desktop-9 columns">
+				<ul id="social">
+					<li><a href="https://www.facebook.com/groups/free.code.camp.markham" class="hoverMe">Markham FCC (FaceBook Group)</a></li>  
+					<li><a href="http://memberclouds.com/fcc" class="hoverMe">MemberClouds FCC</a></li>  
+					<li><a href="https://www.freecodecamp.com" class="hoverMe">Free Code Camp (FCC)</a></li>  
+					<li><a href="https://www.facebook.com/memberclouds" class="hoverMe">MemberClouds</a></li>
+				</ul><!-- // #social -->
+			</div><!-- // .desktop-9 -->
+			<div class="clear"></div>
+		</div><!-- // .container -->
+	</section><!-- // section#footer -->
+	<!-- JS ================================================== -->
+	<!-- 
+		Flexslider 2.1 has known issues of manualControls setting with jQuery 1.9~
+		Use jQuery 1.8 until Flexslider 2.2 stable version is released
+	-->
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
+	<script src="js/jQuery.BlackAndWhite.min.js"></script>
+	<script src="js/modernizr.js"></script>
+	<script src="js/less-1.4.0.min.js"></script>
+	<script src="js/jquery.typeMenu.js"></script>
+	<script src="js/jquery.typeSticky.js"></script>	
+	<!-- <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script> -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAcMep2XXUFcbqsv9vjz4vcAO_4pTDiD-o&callback=initMap"
+    async defer></script>
+	<script src="js/googleMapStyle.js"></script>
+	<script src="js/jquery.custom.js"></script>
+<!-- End Document ================================================== -->
+</body>
+</html>
